fix: datarecord should store multi indicators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ else()
     else()
         add_executable(program_design_week
             ${PROJECT_SOURCES}
+            addrecord.ui
         )
     endif()
 
