--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ else()
         add_executable(program_design_week
             ${PROJECT_SOURCES}
             addrecord.ui
+            addrecords.ui
         )
     endif()
 
