--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
+.vscode
 build/
 .cache/
+CMakeLists.txt.user
+program_design_week_zh_CN.ts
 *~
 *.autosave
 *.a
